# oop-s4-bmstu

./: .gitignore  README.md
examples/lec_09/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  README.md
lab1/: cube.txt  rabbit.txt
lab1/lab1/: CMakeLists.txt  edges.cpp  edges.h  errors.h  everything.cpp  everything.h  figure.cpp  figure.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  points.cpp  points.h  requests.cpp  requests.h
lab1/lab1/qt/: draw.cpp  draw.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab2/: .clangd  base_error.h  base_tree.h  concepts.h  rb_tree.h  rb_tree.hpp  rb_tree_errors.h
lab2/impl/: rb_tree.hpp
lab3/lab3/: .clangd  CMakeLists.txt  application.h  config.h  config.yml  main.cpp
lab3/lab3/commands/: base_command.h  camera.h  model.h  scene.h
lab3/lab3/creators/: base_manager_creator.h  camera_manager_creator.h  draw_manager_creator.h  load_manager_creator.h  lord_of_the_creators.h  scene_manager_creator.h  transform_manager_creator.h
lab3/lab3/facades/: controller_facade.cpp  controller_facade.h  facade.h
lab3/lab3/guis/: gui_bridge.h  gui_impl.h  imgui_opengl3_glfw_impl.h  qt6_impl.h
lab3/lab3/guis/imgui_opengl3_glfw_ui_impl/: includes.h
lab3/lab3/managers/: base_manager.h  camera_manager.h  draw_manager.h  load_manager.h  manager_solver.cpp  manager_solver.h  scene_manager.h  transform_manager.h
lab4/: .clangd  CMakeLists.txt  algorithm.cpp  algorithm.h  cabin.cpp  cabin.h  client.cpp  controller.cpp  controller.h  doors.cpp  doors.h  elevator.cpp  elevator.h  main.cpp  printer.h  server.cpp  signals_and_slots.h  timer.h  writer.h
lab4/backup/: CMakeLists.txt  cabin.h  client.cpp  writer.h
lab4/doc/: lab4.drawio
lab4/v1/: CMakeLists.txt  cabin.cpp  cabin.h  doors.cpp  doors.h  timer.h  writer.h
lab5/: lab5_fan.drawio  lab5_fan_v2.drawio
